# moshwatch

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSES.md  NOTICE  README.md  SECURITY.md
.build-helper/: presets.json
.github/: CODEOWNERS  dependabot.yml  release.yml
.github/workflows/: ci.yml  dependency-review.yml  release.yml  validate.yml
crates/moshwatch-core/: Cargo.toml
crates/moshwatch-core/src/: config.rs  identity.rs  lib.rs  observability.rs  protocol.rs  time.rs
crates/moshwatch-ui/: Cargo.toml
crates/moshwatch-ui/src/: main.rs
crates/moshwatchd/: Cargo.toml
crates/moshwatchd/src/: api.rs  discovery.rs  history.rs  main.rs  metrics.rs  runtime_stats.rs  sanitize.rs  state.rs
docs/adr/: 0001-observability-foundation.md
docs/design/: modularisation-and-boundaries.md
docs/observability/: metric-catalog.md  migration.md  operator-guide.md
examples/observability/: README.md
examples/observability/config/: moshwatch.toml
examples/observability/grafana/: README.md
examples/observability/grafana/dashboards/: moshwatch-overview.json
examples/observability/grafana/provisioning/dashboards/: moshwatch.yml
examples/observability/grafana/provisioning/datasources/: moshwatch.yml
examples/observability/otel-collector/: README.md  otelcol.yaml
examples/observability/prometheus/: README.md  prometheus.yml
examples/observability/prometheus/rules/: moshwatch.rules.yml
examples/observability/prometheus/tests/: moshwatch.rules.test.yml
scripts/: mosh-server-wrapper.sh
systemd/: build-helper-mcp-moshwatch-discovery.conf.template  moshwatchd.service.template
xtask/: Cargo.toml
xtask/src/: main.rs
