# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
flate2 = "1"
moshwatch-core = { path = "../crates/moshwatch-core" }
sha2.workspace = true
tar = "0.4"
serde_json.workspace = true
tempfile.workspace = true
toml.workspace = true
serde_yaml = "0.9.34"
