# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "moshwatch-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
libc = "0.2.177"
moshwatch-core = { path = "../moshwatch-core" }
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
