# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "moshwatchd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
libc = "0.2.177"
moshwatch-core = { path = "../moshwatch-core" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
